<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/abc_menu_dropdown_panel_holo_dark"
    >
    
    <ImageView
        android:id="@+id/viewHolder_pic_imageView"
        android:layout_width="61dp"
        android:layout_height="91dp"
        android:gravity="center"
        android:contentDescription="@string/cDesc_viewHolder_pic_imageView"
         />

    <View
        android:id="@+id/view1"
        android:layout_width="3dp"
        android:layout_height="91dp"
        android:background="#d00" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/viewHolder_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:text="Lord Of The Rings"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:textColor="@color/WhiteSmoke"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/viewHolder_genre_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="Adventure/Drama"
            android:textColor="@color/WhiteSmoke"
            android:textSize="12sp"
            android:textStyle="italic"
            />

        <TextView
            android:id="@+id/viewHolder_year_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:text="(1997)"
            android:textColor="@color/WhiteSmoke"
            android:textSize="12sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp" 
                android:layout_weight="90"
                >

                <ImageView
                    android:id="@+id/viewHolder_rating_imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/cDesc_viewHolder_rating_imageView"
                    android:src="@android:drawable/btn_star_big_on" />

                <TextView
                    android:id="@+id/viewHolder_colon_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text=":"
                    android:textColor="@color/WhiteSmoke"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/viewHolder_rating_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:text="7/10"
                    android:textColor="@color/WhiteSmoke"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/viewHolder_watched_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="watched"
                android:textColor="@color/MyGreen"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/viewHolder_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/cDesc_viewHolder_arrow"
        android:src="@drawable/abc_ic_ab_back_holo_dark" 
        android:rotation="180"
        />

</LinearLayout>